# athena

./: .gitignore  CLAUDE.md  Cargo.toml  feature_specs.json
dev/: session_log.md
dev/active/feature-001-markdown-ingestion/: feature-001-context.md  feature-001-plan.md  feature-001-tasks.md
src/: main.rs
src/ingestion/: chunker.rs  error.rs  ingestor.rs  markdown.rs  mod.rs  traits.rs  types.rs
