[package]
name = "athena"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
pulldown-cmark = "0.10"
walkdir = "2"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
