[package]
name = "athena"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
pulldown-cmark = "0.13.0"
walkdir = "2.5.0"
anyhow = "1.0.100"
thiserror = "1.0.69"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
